Test another css path.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href=".///css/bootstrap.css" type="text/css" />
-  <link rel="stylesheet" href=".///css/bootstrap-responsive.css" type="text/css" />
+  <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="../css/bootstrap-responsive.css" type="text/css" />
 </head>
 <body>
 
