--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="row">
-  <div class="span2"></div>
+  <div class="span2">&nbsp;</div>
   <div class="span8">
     {{ content }}
   </div>
