Use sections to apply alternating background colors.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="../css/bootstrap-responsive.css" type="text/css" />
+  <link rel="stylesheet" href="../css/style.css" type="text/css" />
 </head>
 <body>
 
