--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-#cover {
+section:nth-child(odd) {
   background-color: #e98043;
 }
 
-.page {
+section:nth-child(even) {
   background-color: #eee;
 }
