--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ section:nth-child(even) {
   background-color: #333;
 }
 
+section:nth-child(even) h1,
 section:nth-child(even) h3 {
   color: #fafafa;
 }
