Show logo and book title on new sidebar.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,14 @@
 <body>
 
 <div class="row">
-  <div class="span2">&nbsp;</div>
-  <div class="span8">
+  <div class="span4">
+    <img src="../images/logo.jpeg" />
+    <div id="book_title">
+      <h2>Tai Chi within<br>Everyday Activities</h2>
+      <span class="subtitle">the 21-day chi habits</span>
+    </div>
+  </div>
+  <div class="span6">
     {{ content }}
   </div>
   <div class="span2"></div>
