--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+#book_title {
+  margin-left: 20px;
+  text-align: center;
+}
+
+#book_title > h2 {
+  padding: 0px;
+}
+
+.subtitle {
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
 section:nth-child(odd) {
   background-color: #fafafa;
 }
