--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,21 @@
 </head>
 <body>
 
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="nav-collapse">
+          <ul class="nav pull-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Author</a></li>
+            <li><a href="#">Table of Contents</a></li>
+            <li><a href="#">Donate</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <div class="row">
   <div class="span4">
     <img src="../images/logo.jpeg" />
