--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,30 @@
       <div class="container">
         <div class="nav-collapse">
           <ul class="nav pull-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Author</a></li>
-            <li><a href="#">Table of Contents</a></li>
-            <li><a href="#">Donate</a></li>
+            <li>
+              <a href="#">
+                <i class="icon-home"></i>
+                Home
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="icon-user"></i>
+                Author
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="icon-th-list"></i>
+                Table of Contents
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="icon-heart"></i>
+                Donate
+              </a>
+            </li>
           </ul>
         </div>
       </div>
