--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 <head>
   <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="../css/bootstrap-responsive.css" type="text/css" />
+  <link rel="stylesheet" href="../css/nanoscroller.css" type="text/css" />
   <link rel="stylesheet" href="../css/style.css" type="text/css" />
+  <script src="../javascripts/jquery-1.7.2.min.js" ></script>
+  <script src="../javascripts/jquery.nanoscroller.min.js" ></script>
 </head>
 <body>
 
@@ -51,10 +54,20 @@
     </div>
   </div>
   <div class="span6">
-    {{ content }}
+    <div id="nano_scroll" class="nano">
+      <div class="content">
+        {{ content }}
+      </div>
+    </div>
   </div>
   <div class="span2"></div>
 </div>
+
+  <script type="text/javascript">
+    $(function() {
+      $('#nano_scroll.nano').nanoScroller();
+    });
+  </script>
 
 </body>
 </html>
