--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="../css/bootstrap-responsive.css" type="text/css" />
   <link rel="stylesheet" href="../css/nanoscroller.css" type="text/css" />
   <link rel="stylesheet" href="../css/style.css" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Della+Respira' rel='stylesheet' type='text/css'>
   <script src="../javascripts/jquery-1.7.2.min.js" ></script>
   <script src="../javascripts/jquery.nanoscroller.min.js" ></script>
 </head>
@@ -49,7 +50,7 @@
   <div class="span4">
     <img src="../images/logo.jpeg" />
     <div id="book_title">
-      <h2>Tai Chi within<br>Everyday Activities</h2>
+      <h3>Tai Chi within<br>Everyday Activities</h3>
       <span class="subtitle">the 21-day chi habits</span>
     </div>
   </div>
