Update logo. Update layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,14 +47,14 @@
   </div>
 
   <div class="row">
-    <div class="span4">
-      <img src="../images/logo.jpeg" />
+    <div class="span3">
       <div id="book_title">
+        <img src="../images/logo.png" width="270px" />
         <h3>Tai Chi within<br>Everyday Activities</h3>
         <span class="subtitle">the 21-day chi habits</span>
       </div>
     </div>
-    <div class="span8">
+    <div class="span9">
       <div id="nano_scroll" class="nano">
         <div class="content">
           {{ content }}
