Implement dropdown for table of contents nav link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/style.css" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Della+Respira' rel='stylesheet' type='text/css'>
   <script src="../javascripts/jquery-1.7.2.min.js" ></script>
+  <script src="../javascripts/bootstrap.min.js" ></script>
   <script src="../javascripts/jquery.nanoscroller.min.js" ></script>
 </head>
 <body>
@@ -28,11 +29,15 @@
                 Author
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="dropdown">
+              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
                 <i class="icon-th-list"></i>
                 Table of Contents
               </a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Chapter 1</a></li>
+                <li><a href="#">Chapter 2</a></li>
+              </ul>
             </li>
             <li>
               <a href="#">
