--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
         <div class="nav-collapse">
           <ul class="nav pull-right">
             <li>
