--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3003,8 +3003,8 @@ input[type="submit"].btn.btn-mini {
   text-decoration: none;
 }
 .navbar .nav > li > a:hover {
-  background-color: transparent;
-  color: #111;
+  background-color: #111;
+  color: #fafafa;
   text-decoration: none;
 }
 .navbar .nav .active > a,
