--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div id="content_columns" class="row">
     <div class="span3">
       <div id="book_title">
         <img src="../images/logo.png" width="270px" />
