Add Chapter links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,14 @@
                 Table of Contents
               </a>
               <ul class="dropdown-menu">
-                <li><a href="#">Chapter 1</a></li>
-                <li><a href="#">Chapter 2</a></li>
+                <li><a href="./chapter1.html">Introduction</a></li>
+                <li><a href="./chapter2.html">The First Three Steps</a></li>
+                <li><a href="./chapter3.html">Compass &amp; Rudder towards Well Being</a></li>
+                <li><a href="./chapter4.html">Experiencing Chi Habits</a></li>
+                <li><a href="./chapter5.html">Two Habits to Focus on</a></li>
+                <li><a href="./chapter6.html">Setting Time Commitment Goal</a></li>
+                <li><a href="./chapter7.html">Implementing, Monitoring &amp; Review</a></li>
+                <li><a href="./chapter8.html">The 21-Day Journal</a></li>
               </ul>
             </li>
             <li>
