Add incomplete chapter 1 content.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <div class="nav-collapse">
           <ul class="nav pull-right">
             <li>
-              <a href="#">
+              <a href="./home.html">
                 <i class="icon-home"></i>
                 Home
               </a>
