Add author page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="./author.html">
                 <i class="icon-user"></i>
                 Author
               </a>
