--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,7 @@
                 <li><a href="./chapter4.html">Experiencing Chi Habits</a></li>
                 <li><a href="./chapter5.html">Two Habits to Focus on</a></li>
                 <li><a href="./chapter6.html">Setting Time Commitment Goal</a></li>
-                <li><a href="./chapter7.html">Implementing, Monitoring &amp; Review</a></li>
-                <li><a href="./chapter8.html">The 21-Day Journal</a></li>
+                <li><a href="./chapter7.html">Journal and Worksheet</a></li>
               </ul>
             </li>
             <li>
