Put author link beside title.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,9 @@
       <div id="book_title">
         <img src="../images/logo.png" width="270px" />
         <h3>Tai Chi within<br>Everyday Activities</h3>
-        <span class="subtitle">the 21-day chi habits</span>
+        <div class="author">
+          <a href="./author.html">Ed Sevilla</a>
+        </div>
       </div>
     </div>
     <div class="span9">
