--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,19 +60,15 @@
   </div>
 
   <div id="content_columns" class="row">
-    <div class="span3">
-      <div id="book_title">
-        <img src="../images/logo.png" width="270px" />
-        <h3>Tai Chi within<br>Everyday Activities</h3>
-        <div class="author">
-          <a href="./author.html">Ed Sevilla</a>
-        </div>
+    <div id="book_title">
+      <img src="../images/logo.png" width="270px" />
+      <h3>Tai Chi within<br>Everyday Activities</h3>
+      <div class="author">
+        <a href="./author.html">Ed Sevilla</a>
       </div>
     </div>
-    <div class="span9">
-      <div class="content">
-        {{ content }}
-      </div>
+    <div id="content">
+      {{ content }}
     </div>
   </div>
 </body>
